# Jeraido

./: .gitignore  Cargo.toml  flake.nix
asset/: basic.blend  dynamic_map.assets.ron  primary.assets.ron
asset/level/: Level2.glb
disdoc/: main.md
src/: controls.rs  core.rs  editor.rs  lib.rs  main.rs  slice.rs  unordinate.rs
src/actor/: mod.rs  trace.rs
src/actor/character/: character.rs
src/component/: component.rs  mod.rs  spawn.rs  spawn_point.rs  test_component.rs
src/level/: custom.rs  hub.rs  level.rs  map.rs  mod.rs
src/lobby/: client.rs  host.rs  lobby.rs  mod.rs  single.rs
src/map/: custom.rs  hub.rs  map.rs  mod.rs
src/sound/: music.rs
src/ui/: debug.rs  game_menu.rs  menu.rs  mod.rs  ui.rs
src/util/: extend_commands.rs  mod.rs
src/world/: mod.rs  spawn_point.rs  world.rs
