[package]
name = "urmom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_editor_pls = "0.8.1"
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"]}
bevy_controls = { path = "../ex/bevy_controls/crate/bevy_controls" } 
bevy_controls_derive = { path = "../ex/bevy_controls/crate/bevy_controls_derive" } 
env_logger = "0.11.3"
log = "0.4.21"
strum_macros = "0.26.4"
strum = "0.26.2"
winit = "0.29.0"
serde = "1.0.203"
lazy_static = "1.4.0"
image = "0.25.1"
renet = { version = "0.0.15", features = ["serde"] }
bevy_renet = "0.0.11"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
bincode = "1.3.3"
bevy_egui = "0.27.1"
